# nestory

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  __verify_new_home.html  alembic.ini  docker-compose.local.yml  docker-compose.test.yml  pyproject.toml
.github/workflows/: ci.yml
_docs/: 20260417_prompt.md  20260420_prompt.md  20260506_prompt.md  PR-DESCRIPTION-PHASE1.md  phase0_retro.md  raspberry-pi-setup.md
_docs/prompts/: 20260417_prompt.md  20260505_prompt.md  20260506_prompt.md  20260507_prompt.md  20260508_prompt.md  20260510_prompt.md  20260511_prompt.md  20260512_prompt.md  20260513_h_prompt.md  20260513_prompt.md  20260514_prompt.md  20260515_prompt.md  20260516_prompt.md
app/: config.py  deps.py  logging_setup.py  main.py  rate_limit.py  templating.py  templating_filters.py
app/db/: session.py
app/db/migrations/: env.py
app/models/: __init__.py  _enums.py  badge_application.py  comment.py  image.py  interaction.py  interest_region.py  job.py  journey.py  moderation.py  notification.py  post.py  post_validation.py  region.py  region_scoring.py  tag.py  user.py
app/routers/: admin.py  auth.py  content.py  feed.py  hub.py  images.py  interactions.py  journey.py  match.py  me.py  notifications.py  pages.py  profile.py  search.py
app/schemas/: auth.py  post_metadata.py  profile.py
app/scripts/: __init__.py  seed_demo.py
app/scripts/seed_assets/: __init__.py  picsum.py
app/services/: __init__.py  admin_moderation.py  analytics.py  auth.py  badges.py  comments.py  evidence_storage.py  feed.py  hub.py  images.py  interactions.py  kakao.py  kakao_inapp.py  match.py  notifications.py  posts.py  profile.py  regions.py  search.py
app/static/: manifest.webmanifest  sw.js
app/templates/: base.html
app/tests/: conftest.py
app/workers/: queue.py  runner.py
deploy/: README.md  cloudflared-config.example.yml  entrypoint.sh  nginx.conf  nginx.test.conf
deploy/systemd/: nestory-backup.service  nestory-backup.timer  nestory-worker.service  nestory.service
scripts/: backup.sh  bootstrap_admin.py  check_anti_patterns.py  seed_regions.py  seed_yangpyeong_demo.py
(+260 files in other folders)
